# rust-fs-ntfs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.sh  deny.toml  fs-test-harness.toml  harness.toml  readme.md  rust-toolchain.toml  test-matrix.json
.claude/skills/wtx/: SKILL.md
.githooks/: pre-commit
.githooks/pre-commit.d/: github-protect-main.sh  rust-clippy.sh  rust-deps-pinned.sh
.githooks/pre-push.d/: git-tags-on-main.sh
.github/workflows/: ci.yml  release.yml
benches/: byte_decoders.rs
docs/: FUTURE_FEATURES.md  NEXT_PLAN.md  STATUS.md  WRITE_PLAN.md  agent-5442-2026-05-02.md  agent-840e-2026-05-02.md  agent-8934-2026-05-02.md  agent-8a29-2026-05-02.md  agent-c5fe-2026-05-02.md  chkdsk-debugging.md  chkdsk-findings.md  chkdsk-improvement-findings.md  code-review-2026-04-19.md  future-features.md  implementation-plan-secure-and-extend.md  local-test-pipeline.md  missing-functionality.md  mkfs-bug-catalog.md  multi-agent-test-protocol-prompt.md  multi-agent-test-protocol.md  native-read-layer-plan.md  overnight-findings.md  phase-1e-design.md  procmon-trace.md  status.md  test-expansion-plan-2026-06-01.md
docs/spec/: COVERAGE.md  README.md  coverage.md  ntfs-specification.md  readme.md
docs/spec/notes/: open-questions.md  references.md
docs/spec/sections/: 01-geometry-boot.md  02-mft-records.md  03-data-runs-bitmap.md  04-indexes-directories.md  05-logfile-journal.md  06-special-streams.md
docs/testing/: 01-strategy-and-the-contract.md  02-read-path.md  03-write-path.md  04-on-disk-format.md  05-robustness-and-fuzzing.md  06-windows-chkdsk-matrix.md  07-substrate-and-c-abi.md  08-coverage-and-honest-limits.md  09-reproducing-results.md  README.md
examples/: probe_dbg.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_eas.rs  decode_runs.rs  iter_attributes.rs
include/: fs_ntfs.h
scripts/: _matrix-build-json.py  _matrix-collect-vm.sh  claim-scenario.sh  install-hooks.sh  matrix-baseline.sh  matrix-diff.sh  matrix-verify.sh  procmon-chkdsk-trace.ps1  reset-non-passed.sh  run-cycle.sh  run-matrix.sh  run-scenario.ps1  run-windows-test.ps1  run-write-smoke.ps1  setup-local.sh  setup-windows-vm.ps1  setup-windows-vm.sh  test-windows-local.sh  test-windows-matrix.sh  test-windows-write-smoke.sh  update-scenario-status.sh
scripts/fs-test-harness/: README.md  _lib.ps1  win-modify.ps1  win-repeat-mount.ps1  win-write-many.ps1
scripts/v2/: _lib.ps1  check-matrix  smoke.sh  test  win-chkdsk.ps1  win-delete-many.ps1  win-delete.ps1  win-enumerate.ps1  win-format.ps1  win-mkdir.ps1  win-modify.ps1  win-read.ps1  win-rename.ps1  win-repeat-mount.ps1  win-write-many.ps1  win-write.ps1
scripts/win/: verdict-collect.ps1  vm-info.ps1
src/: attr_io.rs  attr_resize.rs  bitmap.rs  block_io.rs  compression.rs  data_runs.rs  ea_io.rs  facade.rs  fs_core_bridge.rs  fsck.rs  idx_block.rs  index_io.rs  lib.rs  mft_bitmap.rs  mft_io.rs  mkfs.rs  read.rs  record_build.rs  sds.rs  sparse.rs  upcase.rs  write.rs
test-diagnostics/: matrix-results.json
test-disks/: .gitignore  _vm-builder.sh  build-ntfs-feature-images.sh
tests/: ads.rs  ads_combinatorics.rs  ads_comprehensive.rs  all_images_rw_smoke.rs  attr_resize.rs  bitmap.rs  boundary_sizes.rs  capi_ads.rs  capi_create.rs  capi_ea.rs  capi_fs_core_rw.rs  capi_fsck.rs  capi_fsck_callbacks.rs  capi_fsck_fs_core_device.rs  capi_handle_rw.rs  capi_link.rs  capi_remove.rs  capi_rename.rs  capi_rename_overwrite.rs  capi_reparse.rs  capi_write_content.rs  capi_write_truncate.rs  capi_write_variants.rs  capi_write_w1.rs  cluster_size_matrix.rs  compare_names_ordinal.rs  corruption_fuzz.rs  corruption_resistance.rs  data_runs.rs  deep.rs  ea_combinatorics.rs  end_to_end_workflows.rs  errno_companion.rs  error_paths.rs  facade.rs  field_exhaustion_ea.rs  field_exhaustion_fn.rs  field_exhaustion_objid.rs  field_exhaustion_reparse.rs  field_exhaustion_si.rs  (+53 more)
tests/common/: mod.rs
tests/matrix/: work-list.json
tests/matrix/agent-reports/: agent-840e-2026-05-02.md  agent-8934-2026-05-02.md  agent-8a29-2026-05-02.md  agent-c5fe-2026-05-02.md  agent-c6a1-2026-05-02.md
