[package]
name = "fs-ntfs"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust NTFS filesystem driver. Exposes a C ABI (fs_ntfs_*) suitable for FFI from C/C++/Go/etc."
repository = "https://github.com/christhomas/rust-fs-ntfs"
readme = "readme.md"

[lib]
name = "fs_ntfs"
crate-type = ["staticlib", "rlib"]

# Unified CLI — format / ls / touch / mkdir / write / rm / rmdir
# subcommands. Cross-platform: builds and runs identically on
# Linux/macOS/Windows because it only depends on this crate's own
# pure-Rust read/write paths. One binary so distribution (GitHub
# Releases, Homebrew taps) ships a single artefact.
#
# Embedding consumers (GUI apps, OS-integration shims) link the
# library directly via the C ABI in `include/fs_ntfs.h` rather than
# shelling out to this CLI; the `format` subcommand and the embedded
# `format_filesystem()` FFI entry point share the same implementation.
[[bin]]
name = "rust-ntfs"
path = "src/bin/rust_ntfs/main.rs"

[dependencies]
ntfs = { version = "0.4", default-features = false, features = ["std"] }
# `log` is the de-facto standard logging facade. Consumers (FSKit
# extension, CLI, integration tests) install whichever subscriber
# they want — `log` itself is a no-op until one is set, so the crate
# stays quiet by default.
log = "0.4"
# Block-device trait surface shared with sister crates (qcow2 reader,
# partition probe, future fs-* drivers). Vendored as a git submodule at
# vendor/rust-fs-core so consumers and CI get a self-contained checkout
# via `git clone --recurse-submodules`; flip to a published version on
# the first crates.io release.
# Strictly additive — ntfs's existing BlockIo trait is unchanged; this
# adds a bridge module so external `fs_core::BlockDevice` implementors
# (a `Qcow2Reader`, a `SliceReader`, etc.) can be driven by ntfs.
am-fs-core = { path = "vendor/rust-fs-core" }

[dev-dependencies]
libtest-mimic = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

# Criterion benchmarks for the three byte-decoders most likely to
# regress as the crate evolves. Run with `cargo bench`; not part of
# CI (criterion needs warm-up samples that don't fit in the per-PR
# budget).
[[bench]]
name = "byte_decoders"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "unwind"

[profile.dev]
opt-level = 1
panic = "unwind"
